--- a/03-myapp1-app-repo/cloudbuild.yaml
+++ b/03-myapp1-app-repo/cloudbuild.yaml
@@ -18,6 +18,8 @@ steps:
   - 'push'
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/myapps-repository/myapp1:$SHORT_SHA'
 # [END cloudbuild - Docker Image Build]
+# up to here is the original cloudbuild.yaml file
+# the lines below are the addtional trigger code to trigger the CD
 
 
 # [START cloudbuild-trigger-cd]
